k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: static-application
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: static-application
    spec:
      containers:
      - name: static
        image: 003669760817.dkr.ecr.ap-southeast-1.amazonaws.com/static1:21
        ports:
        - containerPort: 80
