k8s/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-svc
  namespace: frontend
spec:
  selector:
    app: static-application
  ports:
  - port: 80
    targetPort: 80
